add: lote1, 4 products

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                         </div>
                     </div>
                     <div class="info-producto">
-                        <p><strong>Polera Vintage Moanalua - Port & Company</strong><br>TALLE: M<br>100 Bs</p>
-                        <a href="https://wa.me/59160786758?text=Hola%2C%20buenas.%20Me%20interesa%20comprar%20la%20%C2%B4*Polera%20Vintage%20Moanalua%20-%20Port%20%26%20Company*%C2%B4.%0A*Talle%3A%20M*%0A*Precio%3A%20120%20Bs*%0A*Imagen%3A%20https%3A%2F%2Fraw.githubusercontent.com%2Fleopilots%2Frevibe%2Frefs%2Fheads%2Fmain%2Fassets%2Fimg%2Fproducts%2Fdrop1%2F1-1.webp*" target="_blank">COMPRAR</a>
+                        <p><strong>Polera Vintage - Port & Company</strong><br>TALLE: M<br>Bs. 80 <del>Bs. 120</del></p>
+                        <a href="https://wa.me/59160786758?text=Hola%2C%20buenas.%20Me%20interesa%20la%20*Polera%20Vintage%20-%20Port%20%26%20Company*.%0A*Talle%3A%20M*%0A*Precio%3A%20Bs.%2080%20~~Bs.%20120~~*" target="_blank">COMPRAR</a>
                     </div>
                 </div>
 
@@ -86,8 +86,44 @@
                         </div>
                     </div>
                     <div class="info-producto">
-                        <p><strong>Polera Vintage - POLHAM</strong><br>TALLE: S<br>100 Bs</p>
-                        <a href="https://wa.me/59160786758?text=Hola%2C%20buenas.%20Me%20interesa%20comprar%20la%20%C2%B4*Polera%20Vintage%20-%20POLHAM*%C2%B4.%0A*Talle%3A%20S*%0A*Precio%3A%20100%20Bs*%0A*Imagen%3A%20https%3A%2F%2Fraw.githubusercontent.com%2Fleopilots%2Frevibe%2Frefs%2Fheads%2Fmain%2Fassets%2Fimg%2Fproducts%2Fdrop1%2F2-1.webp*" target="_blank">COMPRAR</a>
+                        <p><strong>Polera Vintage - POLHAM</strong><br>TALLE: S<br>Bs. 80 <del>Bs. 100</del></p>
+                        <a href="https://wa.me/59160786758?text=Hola%2C%20buenas.%20Me%20interesa%20la%20*Polera%20Vintage%20-%20POLHAM*.%0A*Talle%3A%20S*%0A*Precio%3A%20Bs.%2080%20~~Bs.%20100~~*" target="_blank">COMPRAR</a>
+                    </div>
+                </div>
+
+                <!-- Producto 3 -->
+                <div class="producto">
+                    <div class="imagenes">
+                        <div class="imagen-principal">
+                            <img class="zoomable" src="assets/img/products/drop1/3-1.webp" alt="Destacado 3 - img1">
+                        </div>
+                        <div class="imagenes-secundarias">
+                            <img class="zoomable" src="assets/img/products/drop1/3-2.webp" alt="Destacado 3 - img2">
+                            <img class="zoomable" src="assets/img/products/drop1/3-3.webp" alt="Destacado 3 - img3">
+                            <img class="zoomable" src="assets/img/products/drop1/3-4.webp" alt="Destacado 3 - img4">
+                        </div>
+                    </div>
+                    <div class="info-producto">
+                        <p><strong>Polera Y2K - GILDAN</strong><br>TALLE: L<br>Bs. 90</p>
+                        <a href="https://wa.me/59160786758?text=Hola%2C%20buenas.%20Me%20interesa%20la%20*Polera%20Y2K%20-%20GILDAN*.%0A*Talle%3A%20L*%0A*Precio%3A%20Bs.%2090*" target="_blank">COMPRAR</a>
+                    </div>
+                </div>
+
+                <!-- Producto 4 -->
+                <div class="producto">
+                    <div class="imagenes">
+                        <div class="imagen-principal">
+                            <img class="zoomable" src="assets/img/products/drop1/4-1.webp" alt="Destacado 4 - img1">
+                        </div>
+                        <div class="imagenes-secundarias">
+                            <img class="zoomable" src="assets/img/products/drop1/4-2.webp" alt="Destacado 4 - img2">
+                            <img class="zoomable" src="assets/img/products/drop1/4-3.webp" alt="Destacado 4 - img3">
+                            <img class="zoomable" src="assets/img/products/drop1/4-4.webp" alt="Destacado 4 - img4">
+                        </div>
+                    </div>
+                    <div class="info-producto">
+                        <p><strong>Polera Y2K - Old Glory</strong><br>TALLE: XL<br>Bs. 80</p>
+                        <a href="https://wa.me/59160786758?text=Hola%2C%20buenas.%20Me%20interesa%20la%20*Polera%20Y2K%20-%20Old%20Glory*.%0A*Talle%3A%20XL*%0A*Precio%3A%20Bs.%2080*" target="_blank">COMPRAR</a>
                     </div>
                 </div>
             </div>
