--- a/pages/clothing/index.html
+++ b/pages/clothing/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="ropa de hombre, moda masculina, ropa americana hombre, ReVibe hombre, ropa de mujer, moda femenina, ropa americana mujer, ReVibe mujer">
     <meta name="author" content="ReVibe">
     <link rel="icon" href="../../favicon.ico" type="image/x-icon">
-    <title>Ropa de Hombre | ReVibe</title>
+    <title>Ropa de Hombre y Mujer | ReVibe</title>
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/db90717a15.js" crossorigin="anonymous"></script>
     <!-- css -->
@@ -86,8 +86,8 @@
                 </div>
                 <!-- Info -->
                 <div class="info-product">
-                    <p><strong>Polera Vintage Moanalua - Port & Company</strong><br>TALLE: M<br>120 Bs</p>
-                    <a href="https://wa.me/59160786758?text=Hola%2C%20buenas.%20Me%20interesa%20comprar%20la%20%C2%B4*Polera%20Vintage%20Moanalua%20-%20Port%20%26%20Company*%C2%B4.%0A*Talle%3A%20M*%0A*Precio%3A%20120%20Bs*%0A*Imagen%3A%20https%3A%2F%2Fraw.githubusercontent.com%2Fleopilots%2Frevibe%2Frefs%2Fheads%2Fmain%2Fassets%2Fimg%2Fproducts%2Fdrop1%2F1-1.webp*" target="_blank">COMPRAR</a>
+                    <p><strong>Polera Vintage - Port & Company</strong><br>TALLE: M<br>Bs. 80 <del>Bs. 120</del></p>
+                    <a href="https://wa.me/59160786758?text=Hola%2C%20buenas.%20Me%20interesa%20la%20*Polera%20Vintage%20-%20Port%20%26%20Company*.%0A*Talle%3A%20M*%0A*Precio%3A%20Bs.%2080%20~~Bs.%20120~~*" target="_blank">COMPRAR</a>
                 </div>
             </div>
 
@@ -107,8 +107,52 @@
                 </div>
                 <!-- Info -->
                 <div class="info-product">
-                    <p><strong>Polera Vintage - POLHAM</strong><br>TALLE: S<br>100 Bs</p>
-                    <a href="https://wa.me/59160786758?text=Hola%2C%20buenas.%20Me%20interesa%20comprar%20la%20%C2%B4*Polera%20Vintage%20-%20POLHAM*%C2%B4.%0A*Talle%3A%20S*%0A*Precio%3A%20100%20Bs*%0A*Imagen%3A%20https%3A%2F%2Fraw.githubusercontent.com%2Fleopilots%2Frevibe%2Frefs%2Fheads%2Fmain%2Fassets%2Fimg%2Fproducts%2Fdrop1%2F2-1.webp*" target="_blank">COMPRAR</a>
+                    <p><strong>Polera Vintage - POLHAM</strong><br>TALLE: S<br>Bs. 80 <del>Bs. 100</del></p>
+                    <a href="https://wa.me/59160786758?text=Hola%2C%20buenas.%20Me%20interesa%20la%20*Polera%20Vintage%20-%20POLHAM*.%0A*Talle%3A%20S*%0A*Precio%3A%20Bs.%2080%20~~Bs.%20100~~*" target="_blank">COMPRAR</a>
+                </div>
+            </div>
+
+            <div class="product" data-categoria="remeras">
+                <div class="images-container">
+                    <!-- Imagen principal -->
+                    <div class="img-product">
+                        <img class="zoomable" 
+                            src="../../assets/img/products/drop1/3-1.webp" 
+                            alt="img 3-1">
+                    </div>
+                    <!-- Imágenes secundarias -->
+                    <div class="img-product-2">
+                        <img class="zoomable" src="../../assets/img/products/drop1/3-2.webp" alt="img 3-2">
+                        <img class="zoomable" src="../../assets/img/products/drop1/3-3.webp" alt="img 3-3">
+                        <img class="zoomable" src="../../assets/img/products/drop1/3-4.webp" alt="img 3-4">
+                    </div>
+                </div>
+                <!-- Info -->
+                <div class="info-product">
+                    <p><strong>Polera Y2K - GILDAN</strong><br>TALLE: L<br>Bs. 90</p>
+                    <a href="https://wa.me/59160786758?text=Hola%2C%20buenas.%20Me%20interesa%20la%20*Polera%20Y2K%20-%20GILDAN*.%0A*Talle%3A%20L*%0A*Precio%3A%20Bs.%2090*" target="_blank">COMPRAR</a>
+                </div>
+            </div>
+
+            <div class="product" data-categoria="remeras">
+                <div class="images-container">
+                    <!-- Imagen principal -->
+                    <div class="img-product">
+                        <img class="zoomable" 
+                            src="../../assets/img/products/drop1/4-1.webp" 
+                            alt="img 4-1">
+                    </div>
+                    <!-- Imágenes secundarias -->
+                    <div class="img-product-2">
+                        <img class="zoomable" src="../../assets/img/products/drop1/4-2.webp" alt="img 4-2">
+                        <img class="zoomable" src="../../assets/img/products/drop1/4-3.webp" alt="img 4-3">
+                        <img class="zoomable" src="../../assets/img/products/drop1/4-4.webp" alt="img 4-4">
+                    </div>
+                </div>
+                <!-- Info -->
+                <div class="info-product">
+                    <p><strong>Polera Y2K - Old Glory</strong><br>TALLE: XL<br>Bs. 80</p>
+                    <a href="https://wa.me/59160786758?text=Hola%2C%20buenas.%20Me%20interesa%20la%20*Polera%20Y2K%20-%20Old%20Glory*.%0A*Talle%3A%20XL*%0A*Precio%3A%20Bs.%2080*" target="_blank">COMPRAR</a>
                 </div>
             </div>
         </section>
