add: lote1 complete

--- a/index.html
+++ b/index.html
@@ -95,17 +95,16 @@
                 <div class="producto">
                     <div class="imagenes">
                         <div class="imagen-principal">
-                            <img class="zoomable" src="assets/img/products/drop1/3-1.webp" alt="Destacado 3 - img1">
+                            <img class="zoomable" src="assets/img/products/drop1/7-1.webp" alt="Destacado 3 - img1">
                         </div>
                         <div class="imagenes-secundarias">
-                            <img class="zoomable" src="assets/img/products/drop1/3-2.webp" alt="Destacado 3 - img2">
-                            <img class="zoomable" src="assets/img/products/drop1/3-3.webp" alt="Destacado 3 - img3">
-                            <img class="zoomable" src="assets/img/products/drop1/3-4.webp" alt="Destacado 3 - img4">
+                            <img class="zoomable" src="assets/img/products/drop1/7-2.webp" alt="Destacado 3 - img2">
+                            <img class="zoomable" src="assets/img/products/drop1/7-3.webp" alt="Destacado 3 - img3">
                         </div>
                     </div>
                     <div class="info-producto">
-                        <p><strong>Polera Y2K - GILDAN</strong><br>TALLE: L<br>Bs. 90</p>
-                        <a href="https://wa.me/59160786758?text=Hola%2C%20buenas.%20Me%20interesa%20la%20*Polera%20Y2K%20-%20GILDAN*.%0A*Talle%3A%20L*%0A*Precio%3A%20Bs.%2090*" target="_blank">COMPRAR</a>
+                        <p><strong>Camisa Grunge</strong><br>TALLE: M<br>Bs. 120</p>
+                        <a href="https://wa.me/59160786758?text=Hola%2C%20buenas.%20Me%20interesa%20la%20*Camisa%20Grunge*.%0A*Talle%3A%20M*%0A*Precio%3A%20Bs.%20120*" target="_blank">COMPRAR</a>
                     </div>
                 </div>
 
