--- a/pages/accessories/index.html
+++ b/pages/accessories/index.html
@@ -50,7 +50,7 @@
         <!-- Barra de búsqueda -->
         <div class="busqueda-filtro">
             <div class="barra-busqueda">
-                <input type="text" placeholder="Ej: CAZADORA PIEL BOBBY...">
+                <input type="text" placeholder="Ej: Gorra New Era...">
                 <button>BUSCAR</button>
             </div>
 
