--- a/pages/clothing/index.html
+++ b/pages/clothing/index.html
@@ -50,7 +50,7 @@
         <!-- Barra de búsqueda -->
         <div class="busqueda-filtro">
             <div class="barra-busqueda">
-                <input type="text" placeholder="Ej: CAZADORA PIEL BOBBY...">
+                <input type="text" placeholder="Ej: Polera Y2K...">
                 <button>BUSCAR</button>
             </div>
 
@@ -60,6 +60,7 @@
                 <select id="categoria">
                 <option value="">NINGUNA</option>
                 <option value="remeras">POLERAS</option>
+                <option value="camisas">CAMISAS</option>
                 <option value="pantalones">PANTALONES</option>
                 <option value="chaquetas">CHAQUETAS</option>
                 <option value="bermudas">BERMUDAS</option>
@@ -153,6 +154,69 @@
                 <div class="info-product">
                     <p><strong>Polera Y2K - Old Glory</strong><br>TALLE: XL<br>Bs. 80</p>
                     <a href="https://wa.me/59160786758?text=Hola%2C%20buenas.%20Me%20interesa%20la%20*Polera%20Y2K%20-%20Old%20Glory*.%0A*Talle%3A%20XL*%0A*Precio%3A%20Bs.%2080*" target="_blank">COMPRAR</a>
+                </div>
+            </div>
+
+            <div class="product" data-categoria="camisas">
+                <div class="images-container">
+                    <!-- Imagen principal -->
+                    <div class="img-product">
+                        <img class="zoomable" 
+                            src="../../assets/img/products/drop1/5-1.webp" 
+                            alt="img 5-1">
+                    </div>
+                    <!-- Imágenes secundarias -->
+                    <div class="img-product-2">
+                        <img class="zoomable" src="../../assets/img/products/drop1/5-2.webp" alt="img 5-2">
+                        <img class="zoomable" src="../../assets/img/products/drop1/5-3.webp" alt="img 5-3">
+                    </div>
+                </div>
+                <!-- Info -->
+                <div class="info-product">
+                    <p><strong>Camisa Vintage - DAKS</strong><br>TALLE: M<br>Bs. 80</p>
+                    <a href="https://wa.me/59160786758?text=Hola%2C%20buenas.%20Me%20interesa%20la%20*Camisa%20Vintage%20-%20DAKS*.%0A*Talle%3A%20M*%0A*Precio%3A%20Bs.%2080*" target="_blank">COMPRAR</a>
+                </div>
+            </div>
+
+            <div class="product" data-categoria="camisas">
+                <div class="images-container">
+                    <!-- Imagen principal -->
+                    <div class="img-product">
+                        <img class="zoomable" 
+                            src="../../assets/img/products/drop1/6-1.webp" 
+                            alt="img 6-1">
+                    </div>
+                    <!-- Imágenes secundarias -->
+                    <div class="img-product-2">
+                        <img class="zoomable" src="../../assets/img/products/drop1/6-2.webp" alt="img 6-2">
+                        <img class="zoomable" src="../../assets/img/products/drop1/6-3.webp" alt="img 6-3">
+                    </div>
+                </div>
+                <!-- Info -->
+                <div class="info-product">
+                    <p><strong>Camisa Vintage - HAZZYS</strong><br>TALLE: M<br>Bs. 80</p>
+                    <a href="https://wa.me/59160786758?text=Hola%2C%20buenas.%20Me%20interesa%20la%20*Camisa%20Vintage%20-%20HAZZYS*.%0A*Talle%3A%20M*%0A*Precio%3A%20Bs.%2080*" target="_blank">COMPRAR</a>
+                </div>
+            </div>
+
+            <div class="product" data-categoria="camisas">
+                <div class="images-container">
+                    <!-- Imagen principal -->
+                    <div class="img-product">
+                        <img class="zoomable" 
+                            src="../../assets/img/products/drop1/7-1.webp" 
+                            alt="img 7-1">
+                    </div>
+                    <!-- Imágenes secundarias -->
+                    <div class="img-product-2">
+                        <img class="zoomable" src="../../assets/img/products/drop1/7-2.webp" alt="img 7-2">
+                        <img class="zoomable" src="../../assets/img/products/drop1/7-3.webp" alt="img 7-3">
+                    </div>
+                </div>
+                <!-- Info -->
+                <div class="info-product">
+                    <p><strong>Camisa Grunge</strong><br>TALLE: M<br>Bs. 120</p>
+                    <a href="https://wa.me/59160786758?text=Hola%2C%20buenas.%20Me%20interesa%20la%20*Camisa%20Grunge*.%0A*Talle%3A%20M*%0A*Precio%3A%20Bs.%20120*" target="_blank">COMPRAR</a>
                 </div>
             </div>
         </section>
